src/main/kotlin/com/navid/test/creditcard/config/error/exception/MongoMigrationException.kt
package com.navid.test.creditcard.config.error.exception

/**
 * @author Navid Ghahremani (ghahramani.navid@gmail.com)
 */
class MongoMigrationException(message: String?) : Exception(message)
